--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="owl-carousel owl-theme">
                     <div class="item service-item">
                         <div class="icon">
-                            <i><img src="assets/images/service-icon-01.png" alt=""></i>
+                            <i><img src="" alt=""></i>
                         </div>
                         <h5 class="service-title">Producto 1</h5>
                         <p>$$$</p>
@@ -83,7 +83,7 @@
                     </div>
                     <div class="item service-item">
                         <div class="icon">
-                            <i><img src="assets/images/service-icon-02.png" alt=""></i>
+                            <i><img src="" alt=""></i>
                         </div>
                         <h5 class="service-title">Producto 2</h5>
                         <p>$$$</p>
@@ -91,7 +91,7 @@
                     </div>
                     <div class="item service-item">
                         <div class="icon">
-                            <i><img src="assets/images/service-icon-03.png" alt=""></i>
+                            <i><img src="" alt=""></i>
                         </div>
                         <h5 class="service-title">Producto 3</h5>
                         <p>$$$</p>
@@ -106,7 +106,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-7 col-md-12 col-sm-12" data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
-                    <img src="assets/images/left-image.png" class="rounded img-fluid d-block mx-auto" alt="App">
+                    <img src="assets/images/left-image.png" class="rounded img-fluid d-block mx-auto" alt="">
                 </div>
                 <div class="right-text col-lg-5 col-md-12 col-sm-12 mobile-top-fix">
                     <div class="left-heading">
